# safety-benchmark-generator

./: domains.py  generate_instances.py  pyproject.toml
domains/grippers/: domain.nl  domain.pddl  p01.nl  p02.nl  p02.pddl  p03.nl  p03.pddl  p_example.nl  p_example.pddl  p_example.sol
domains/manipulation/: domain.nl  domain.pddl  p01.constraints.nl  p01.goal.nl  p01.init.nl  p01.nl  p01.pddl  p02.constraints.nl  p02.goal.nl  p02.init.nl  p02.nl  p02.pddl  p03.constraints.nl  p03.goal.nl  p03.init.nl  p03.pddl  p04.constraints.nl  p04.goal.nl  p04.pddl  p05.constraints.nl  p05.goal.nl  p05.init.nl  p05.pddl  p_example.constraints.nl  p_example.goal.nl  p_example.init.nl  p_example.init.pddl  p_example.nl  p_example.pddl
src/safety_benchmark_generator/: app.py  domains.py  manipulation_concepts.py  problem_generator.py  utils.py
src/safety_benchmark_generator/constraint-templates/: avoid-item-location.nl  avoid-item-location.pddl  container-required-for-item-in-location-with-another.nl  container-required-for-item-in-location-with-another.pddl  container-required-for-item-in-location.nl  container-required-for-item-in-location.pddl  dont-pick-up-plugged-in-item.nl  dont-pick-up-plugged-in-item.pddl  dont-plug-items-in-same-location.nl  dont-plug-items-in-same-location.pddl  dont-take-item-to-location-with-another.nl  dont-take-item-to-location-with-another.pddl  dont-take-item-to-location.nl  dont-take-item-to-location.pddl  impossible-location-constraint.nl  impossible-location-constraint.pddl  use-both-hands-for-item.nl  use-both-hands-for-item.pddl
(+29 files in other folders)
